criação de uma nova classe de vendas externas, pra não misturar com as vendas dos quartos
modelo do banco atualizado , novas tabelas

--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -1,7 +1,7 @@
 [general]
 timezone = America/Sao_Paulo
 language = pt
-application = template
+application = PsRita
 theme = theme3
 seed = 
 rest_key = 
